# Marci-tui

./: Cargo.toml  README.md
src/: app.rs  lib.rs  main.rs
src/win/: mod.rs  windows_bindings.rs
