[package]
name = "term_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
colored = "2.0.4"
colorize = "0.1.0"
crossterm = "0.27.0"
device_query = "1.1.3"
windows = "0.51.1"

[dependencies.windows-sys]
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
]